# Reciprocal-Receptacles

./: CMakeLists.txt  Makefile  README.md
cmake/: ExtractValidFlags.cmake  options.cmake
examples/: CMakeLists.txt  Callable.cpp  CallableStaticCast.cpp  CallableTable.cpp  CallbackTable.cpp  IntegralIn.cpp  IntegralToType.cpp  Introspection.cpp  Key.cpp  KeyMtOutput.cpp  LastType.cpp  LockType.cpp  MemberDecay.cpp  Module.cpp  PolicyCall.cpp  PolicyCall.cpp.postpone  PolymorphicCell.cpp  SizeofCallable.cpp  Subsciption.cpp  Switch.cpp  SyncTrait.cpp  SyncedCallable.cpp  TypeToIntegral.cpp
rr-include/rr/subscription/: Subscription.hpp  subscription.hpp
rr/rr/subscription/: Subscription.hpp
src/: CMakeLists.txt
src/Rr/: Key.hpp  Key.impl  Module.hpp  Module.impl  Subscription.hpp  Subscription.impl  SyncTrait.hpp
src/Rr/Cb/: Callable.hpp  Function.hpp
src/Rr/Cont/: Array.hpp  Array.impl  PointerStorage.hpp  Variant.hpp  Wrap.hpp  Wrap.impl
src/Rr/Port/: Log.hpp  Thread.hpp
src/Rr/Refl/: CallFamily.hpp  CallSfinae.hpp  Introspection.hpp  LockSfinae.hpp  NoMember.hpp
src/Rr/Sync/: Introspection.hpp  LockWrap.hpp  LockWrap.impl  PrimitiveHolder.hpp  SharedAccess.hpp  SharedAccess.impl  SharedMutex.hpp  Storage.hpp  Storage.impl  Sync.hpp  SyncMock.hpp  (+1 more)
test/: CMakeLists.txt  dummy.cpp
test/Cb/: Cb.cpp  Function.cpp
test/Cont/: Variant.cpp  Wrap.cpp
test/Refl/: CallFamily.cpp
test/Sync/: SharedAccess.cpp  Storage.cpp
test/Trait/: Decay.cpp  IsConstructible.cpp  IsFunction.cpp  RemoveExtent.cpp
test/Util/: Event.cpp  Key.cpp  Module.cpp
(+56 files in other folders)
